--- a/public/css/main.css
+++ b/public/css/main.css
@@ -22,7 +22,7 @@
 /* Form */
 form{padding:0;margin:0}
 form ul{padding:0;margin:0; list-style-type: none; list-style-position: inside}
-form input:not(.btn):not(.default), form select, form textarea{padding: 5px; font-size: 1.2em; color: black; min-width: 250px; border: 1px solid #AAA; background-color: #FFFFCC; box-shadow: 0px 0px 2px rgba(0,0,0,0.15);}
+form input:not(.btn):not(.default):not([type='checkbox']), form select, form textarea{padding: 5px; font-size: 1.2em; color: black; min-width: 250px; border: 1px solid #AAA; background-color: #FFFFCC; box-shadow: 0px 0px 2px rgba(0,0,0,0.15);}
 form input:not(.btn):focus, form select:focus, form textarea:focus{ border-color: #558ABB; background-color: #FFF; color: #000; box-shadow: 0px 0px 5px rgba(85,138,187,0.3)}
 form textarea{min-height: 150px; width: 65vw; font-family: "Courier New"; }
 form ul li label:not(.default){width: 110px; display: inline-block; text-align: right; font-weight: normal; margin-right: 15px; top: 7px; float: left}
