--- a/public/css/main.css
+++ b/public/css/main.css
@@ -17,6 +17,7 @@
 .red{color:red}
 .gray{color:gray}
 .lightgray{color:#AAA}
+.black{color:black}
 .orange{color:orange}
 .h1, h1{font-size: 30px;text-decoration:none !important; color:#333}
 .h2, h2{font-size: 26px;text-decoration:none !important; color:#333}
