--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,6 +8,7 @@
 #wrapper h1.head {border-bottom: 3px solid orange; margin: 0 0 20px 0; padding: 0 0 5px 0; }
 #wrapper h1.head a.btn {margin-left: 5px; font-size: 0.44em}
 #wrapper .info {font-style: italic; color: #777; font-size: 0.9em}
+#wrapper div.notifBox {padding: 5px 10px; background-color: #dddddd; color: #333; font-size: 1.2em}
 #wrapper div.sqlError {padding: 10px; margin: 10px 0; font-family: "Courier New"; color: red; background-color: #FFA}
 #wrapper .console {padding: 10px; margin: 10px 0; font-family: "Courier New"; color: #444; background-color: #EEE}
 #wrapper .btn:hover{transform: scale(1.05)}
@@ -42,6 +43,7 @@ form ul li.error label, form ul li.error input, form ul li.error select, form ul
 /* db/show page */
 #wrapper ul.reports {list-style: none inside; margin: 0; padding: 0}
 #wrapper ul.reports li{padding: 15px;  display: block; margin-top: 15px; border: 1px solid #E5E5E5; border-left: 5px solid orange; background-color: #EEE}
+#wrapper ul.reports li:hover {transform: scale(1.007); box-shadow: 0 0 20px rgba(0,0,0,0.15); transition: 0.2s ease; background-color: #FFF }
 #wrapper ul.reports li.first-report{background-color: #FFF; padding:0;border-width:0}
 #wrapper ul.reports li.first-report a {border: 2px dashed #BBB;padding: 12px 15px; display: block;color: orange; font-size: 1.2em; text-decoration: none; font-weight: bold}
 #wrapper ul.reports li.first-report a:hover{border-color: #888}
@@ -55,20 +57,6 @@ form ul li.error label, form ul li.error input, form ul li.error select, form ul
 .log table th {font-weight: bold}
 #wrapper ul.reports li .view-more {text-align: center; cursor:pointer; font-size:1.5em; margin-bottom: -15px}
 #wrapper ul.reports span.error {color: #C1445C;}
-
-/* report/index page * /
-#wrapper ul.files, #wrapper ul.files > li > ul {list-style-type: none; list-style-position: inside; padding:0 0 10px;margin:0;}
-#wrapper ul.files a {color:#333; text-decoration: none}
-#wrapper ul.files a:hover {color:#000;}
-#wrapper ul.files > li { margin-bottom: 10px}
-#wrapper ul.files > li > a{font-size:1.6em; color: #000}
-#wrapper ul.files > li > ul {background-color: #F3F3F3; padding: 10px 10px 0 10px}
-#wrapper ul.files > li > ul > li { padding-bottom: 10px}
-#wrapper ul.files > li > ul > li > a{font-size:1.4em}
-#wrapper ul.files > li > ul > li > table, #wrapper .table-users {font-size:1em;min-width:480px;width:85vw;max-width:1200px;background-color:#FFF}
-#wrapper ul.files > li > ul > li .btn-success {color: #FFF}
-/**/
-
 #wrapper div.bitm {width: calc(100vw/5); float: left;}
 #wrapper div.bitm > a.cnt.small, #wrapper div.bitm > a.add.small{height: 180px}
 #wrapper div.bitm > a.cnt {overflow:hidden; display: block; height: 260px; padding: 10px 20px; margin: 15px; text-align: center; text-decoration:none; color: #333;
