--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,7 +6,8 @@
 #wrapper a{cursor: pointer}
 #wrapper div.spacer {height: 30px}
 #wrapper h1.head {border-bottom: 3px solid orange; margin: 0 0 20px 0; padding: 0 0 5px 0; }
-#wrapper h1.head a.btn {margin-left: 5px; font-size: 0.44em}
+#wrapper h1.head a.btn {margin-left: 5px; font-size: 0.45em; height: 29px}
+#wrapper h1.head .go-back { background: url('../img/arrow2.png') no-repeat left center orange; border-right: 5px solid #fff; color: #fff; padding: 10px 15px 10px 35px; text-decoration: none; font-size: 0.7em}
 #wrapper .info {font-style: italic; color: #777; font-size: 0.9em}
 #wrapper div.notifBox {padding: 5px 10px; background-color: #ffa; color: #333; font-size: 1.2em}
 #wrapper div.sqlError {padding: 10px; margin: 10px 0; font-family: "Courier New"; color: red; background-color: #FFA}
@@ -122,6 +123,7 @@ table.viewLog, table.viewLog td, table.viewLog th {	border: 1px solid #CCC; padd
 table.viewLog th {color: #FFA500; background-color: #000; padding: 5px; border-bottom: 2px solid #FFA500}
 
 @media(min-width: 920px) {
+    #wrapper h1.head .go-back {display: none}
     .c2 {padding-left: 330px;}
     .c2.toggled {padding-left: 0;}
     #sidebar-wrapper {width: 330px; text-align: center}}
