--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,5 @@
 /* General */
-#wrapper {min-width: 550px}
+#wrapper {min-width: 550px; -webkit-transition: all 0.5s ease; -moz-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; margin-top: 70px;}
 #wrapper a{cursor: pointer}
 #wrapper div.spacer {height: 30px}
 #wrapper h1.head {border-bottom: 3px solid #96DC05; margin: 0 0 20px 0; padding: 0 0 5px 0; }
@@ -23,8 +23,8 @@
 .black{color:black}
 .orange{color:orange}
 .lmj {color: #72EF03 !important;}
-.h1, h1{font-size: 24px;text-decoration:none !important; color:#333}
-.h2, h2{font-size: 22px;text-decoration:none !important; color:#333}
+.h1, h1{font-size: 22px;text-decoration:none !important; color:#333}
+.h2, h2{font-size: 20px;text-decoration:none !important; color:#333}
 .h3, h3{font-size: 18px;text-decoration:none !important; color:#333}
 
 /* Form */
@@ -82,7 +82,7 @@ form ul li.error label, form ul li.error input, form ul li.error select, form ul
 #wrapper div.bitm > a.cnt p{color: #666}
 #wrapper div.bitm > a.cnt p.console{background-color: #FFF; text-align: left}
 #wrapper div.bitm > div {position:relative;right:25px;top:-25px;margin-top:-30px; }
-@media(max-width: 640px){#wrapper div.bitm {width: 100%}}
+@media(max-width: 640px){ #wrapper div.bitm {width: 100%}}
 @media(min-width: 641px) {#wrapper div.bitm {width: 33%}}
 @media(min-width: 1001px) {#wrapper div.bitm {width: 25%}}
 @media(min-width: 1201px) {#wrapper div.bitm {width: 20%}}
@@ -90,8 +90,7 @@ form ul li.error label, form ul li.error input, form ul li.error select, form ul
 @media(min-width: 1801px) {#wrapper div.bitm {width: 200px}}
 
 /* full logs modal */
-#wrapper #logsModal .modal-body {max-height: calc(100vh - 210px);overflow-y: auto;}
-#wrapper {-webkit-transition: all 0.5s ease; -moz-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; margin-top: 50px;}
+#wrapper #logsModal .modal-body {max-height: calc(100vh - 210px);overflow-y: auto}
 #wrapper.toggled {padding-left: 260px;}
 #sidebar-wrapper {
     z-index: 1000; position: fixed; left: 250px; width: 0; height: 100%; margin-left: -260px; overflow-y: auto; text-align: center
@@ -124,15 +123,18 @@ table.viewLog {	border-collapse: collapse; font-size: 0.8em}
 table.viewLog, table.viewLog td, table.viewLog th {	border: 1px solid #CCC; padding: 2px 5px;}
 table.viewLog th {color: #FFA500; background-color: #000; padding: 5px; border-bottom: 2px solid #FFA500}
 
+@media(max-width: 640px){ .lng {display: none}}
 @media(min-width: 920px) {
+    #wrapper {margin-top: 50px}
     #wrapper h1.head .go-back {display: none}
     .c2 {padding-left: 330px;}
     .c2.toggled {padding-left: 0;}
-    #sidebar-wrapper {width: 330px; text-align: center}}
+    #sidebar-wrapper {width: 330px; text-align: center}
     .c2.toggled #sidebar-wrapper {width: 0;}
     #pg-wrapper {padding: 20px;position: relative;}
     .c2.toggled #pg-wrapper {position: relative;margin-right: 0}
 }
+
 
 
 
