--- a/public/css/main.css
+++ b/public/css/main.css
@@ -60,8 +60,8 @@ form ul li.error label, form ul li.error input, form ul li.error select, form ul
 .log table td, .log table th {font-size:0.8em;font-family:"Courier New";padding:4px 10px !important}
 .log table th {font-weight: bold}
 
-.user {font-size: 1em; background-color: #EEE; padding: 15px; border: 1px solid #e5e5e5 }
-.user table {margin-bottom: 0; background-color: #FFF}
+.user, .latest-logs {font-size: 1em; background-color: #EEE; padding: 15px; border: 1px solid #e5e5e5 }
+.user table, .latest-logs table  {margin-bottom: 0; background-color: #FFF}
 .user table td, .user table th {font-size:0.9em;padding:5px 12px !important}
 .user table th {font-weight: bold}
 
